fix: gap at bottom

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -23,6 +23,7 @@ html, body {
 }
 
 html {
+  overflow: hidden;
   position: relative;
   background: url(../images/banner_480.jpg) no-repeat center center fixed;
   background-color: #020202;
@@ -33,7 +34,7 @@ html {
 
 #intro {
   position: absolute;
-  bottom: 0;
+  bottom: -1px;
   left: 0;
 }
 
